--- a/src/Module 7/Measuring Data Accuracy, Completeness & Consistency/Ques_6.ipynb
+++ b/src/Module 7/Measuring Data Accuracy, Completeness & Consistency/Ques_6.ipynb
@@ -25,17 +25,204 @@
    "source": [
     "# Write your code from here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-05-21 16:42:10,551 - INFO - Data Quality Monitoring System Initialized.\n",
+      "2025-05-21 16:42:10,558 - INFO - Monitoring system will run every 5 seconds for 30 seconds (conceptual).\n",
+      "2025-05-21 16:42:10,561 - INFO - --- Starting Data Quality Metric Calculation ---\n",
+      "2025-05-21 16:42:10,586 - INFO - [2025-05-21 16:42:10] company_prices.csv - Missing 'price' percentage: 0.00%\n",
+      "2025-05-21 16:42:10,707 - INFO - [2025-05-21 16:42:10] CRM/ERP - Email conflict percentage: 60.00%\n",
+      "2025-05-21 16:42:10,725 - INFO - --- Finished Data Quality Metric Calculation ---\n",
+      "2025-05-21 16:42:10,737 - INFO - Next run in 5 seconds...\n",
+      "2025-05-21 16:42:15,744 - INFO - --- Starting Data Quality Metric Calculation ---\n",
+      "2025-05-21 16:42:15,758 - INFO - [2025-05-21 16:42:15] company_prices.csv - Missing 'price' percentage: 0.00%\n",
+      "2025-05-21 16:42:15,779 - INFO - [2025-05-21 16:42:15] CRM/ERP - Email conflict percentage: 60.00%\n",
+      "2025-05-21 16:42:15,789 - INFO - --- Finished Data Quality Metric Calculation ---\n",
+      "2025-05-21 16:42:15,796 - INFO - Next run in 5 seconds...\n",
+      "2025-05-21 16:42:20,804 - INFO - --- Starting Data Quality Metric Calculation ---\n",
+      "2025-05-21 16:42:20,808 - INFO - [2025-05-21 16:42:20] company_prices.csv - Missing 'price' percentage: 0.00%\n",
+      "2025-05-21 16:42:20,820 - INFO - [2025-05-21 16:42:20] CRM/ERP - Email conflict percentage: 60.00%\n",
+      "2025-05-21 16:42:20,826 - INFO - --- Finished Data Quality Metric Calculation ---\n",
+      "2025-05-21 16:42:20,827 - INFO - Next run in 5 seconds...\n",
+      "2025-05-21 16:42:25,833 - INFO - --- Starting Data Quality Metric Calculation ---\n",
+      "2025-05-21 16:42:25,837 - INFO - [2025-05-21 16:42:25] company_prices.csv - Missing 'price' percentage: 0.00%\n",
+      "2025-05-21 16:42:25,841 - INFO - [2025-05-21 16:42:25] CRM/ERP - Email conflict percentage: 60.00%\n",
+      "2025-05-21 16:42:25,842 - INFO - --- Finished Data Quality Metric Calculation ---\n",
+      "2025-05-21 16:42:25,843 - INFO - Next run in 5 seconds...\n",
+      "2025-05-21 16:42:30,845 - INFO - --- Starting Data Quality Metric Calculation ---\n",
+      "2025-05-21 16:42:30,848 - INFO - [2025-05-21 16:42:30] company_prices.csv - Missing 'price' percentage: 0.00%\n",
+      "2025-05-21 16:42:30,853 - INFO - [2025-05-21 16:42:30] CRM/ERP - Email conflict percentage: 60.00%\n",
+      "2025-05-21 16:42:30,854 - INFO - --- Finished Data Quality Metric Calculation ---\n",
+      "2025-05-21 16:42:30,855 - INFO - Next run in 5 seconds...\n",
+      "2025-05-21 16:42:35,861 - INFO - --- Starting Data Quality Metric Calculation ---\n",
+      "2025-05-21 16:42:35,864 - INFO - [2025-05-21 16:42:35] company_prices.csv - Missing 'price' percentage: 0.00%\n",
+      "2025-05-21 16:42:35,869 - INFO - [2025-05-21 16:42:35] CRM/ERP - Email conflict percentage: 60.00%\n",
+      "2025-05-21 16:42:35,870 - INFO - --- Finished Data Quality Metric Calculation ---\n",
+      "2025-05-21 16:42:35,871 - INFO - Next run in 5 seconds...\n",
+      "2025-05-21 16:42:40,877 - INFO - Conceptual monitoring run finished.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import logging\n",
+    "import datetime\n",
+    "import time # For scheduling (in a simplified loop)\n",
+    "# import schedule # You would use this in a real-world scenario\n",
+    "\n",
+    "# --- 1. Setup Logging ---\n",
+    "# Configure logging to save data quality metrics to a file\n",
+    "# This will create a 'data_quality_log.txt' file in the same directory\n",
+    "logging.basicConfig(\n",
+    "    filename='data_quality_log.txt',\n",
+    "    level=logging.INFO,\n",
+    "    format='%(asctime)s - %(levelname)s - %(message)s'\n",
+    ")\n",
+    "# Also set up a console handler to see output in real-time\n",
+    "console_handler = logging.StreamHandler()\n",
+    "console_handler.setLevel(logging.INFO)\n",
+    "formatter = logging.Formatter('%(asctime)s - %(levelname)s - %(message)s')\n",
+    "console_handler.setFormatter(formatter)\n",
+    "logging.getLogger().addHandler(console_handler)\n",
+    "\n",
+    "logging.info(\"Data Quality Monitoring System Initialized.\")\n",
+    "\n",
+    "# --- 2. Script to Calculate Metrics (calculate_quality_metrics function) ---\n",
+    "def calculate_quality_metrics():\n",
+    "    \"\"\"\n",
+    "    Calculates and logs data quality metrics for specified datasets.\n",
+    "    Metrics include:\n",
+    "    - Missing data percentage for 'price' in company_prices.csv\n",
+    "    - Percentage of email conflicts between crm_customers.csv and erp_customers.csv\n",
+    "    \"\"\"\n",
+    "    logging.info(\"--- Starting Data Quality Metric Calculation ---\")\n",
+    "    current_time = datetime.datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "\n",
+    "    # --- Metric 1: Missing Data in company_prices.csv (Completeness) ---\n",
+    "    try:\n",
+    "        company_df = pd.read_csv('company_prices.csv')\n",
+    "        missing_prices_count = company_df['price'].isnull().sum()\n",
+    "        total_prices = len(company_df)\n",
+    "        if total_prices > 0:\n",
+    "            missing_price_percentage = (missing_prices_count / total_prices) * 100\n",
+    "        else:\n",
+    "            missing_price_percentage = 0.0 # Handle empty DataFrame\n",
+    "        logging.info(f\"[{current_time}] company_prices.csv - Missing 'price' percentage: {missing_price_percentage:.2f}%\")\n",
+    "    except FileNotFoundError:\n",
+    "        logging.error(f\"[{current_time}] Error: company_prices.csv not found for completeness check.\")\n",
+    "        missing_price_percentage = None\n",
+    "    except Exception as e:\n",
+    "        logging.error(f\"[{current_time}] Error calculating missing price percentage: {e}\")\n",
+    "        missing_price_percentage = None\n",
+    "\n",
+    "    # --- Metric 2: Email Conflicts between CRM and ERP (Accuracy) ---\n",
+    "    try:\n",
+    "        crm_df = pd.read_csv('crm_customers.csv')\n",
+    "        erp_df = pd.read_csv('erp_customers.csv')\n",
+    "\n",
+    "        merged_customers_df = pd.merge(crm_df, erp_df, on='customer_id', suffixes=('_crm', '_erp'), how='inner')\n",
+    "\n",
+    "        # Find conflicting emails for common customers\n",
+    "        conflicting_emails_df = merged_customers_df[\n",
+    "            (merged_customers_df['email_crm'] != merged_customers_df['email_erp']) &\n",
+    "            (merged_customers_df['email_crm'].notnull()) &\n",
+    "            (merged_customers_df['email_erp'].notnull())\n",
+    "        ]\n",
+    "        total_compared_customers = len(merged_customers_df)\n",
+    "        conflicting_customers_count = len(conflicting_emails_df)\n",
+    "\n",
+    "        if total_compared_customers > 0:\n",
+    "            email_conflict_percentage = (conflicting_customers_count / total_compared_customers) * 100\n",
+    "        else:\n",
+    "            email_conflict_percentage = 0.0 # No common customers to compare\n",
+    "        logging.info(f\"[{current_time}] CRM/ERP - Email conflict percentage: {email_conflict_percentage:.2f}%\")\n",
+    "    except FileNotFoundError:\n",
+    "        logging.error(f\"[{current_time}] Error: CRM/ERP customer files not found for conflict check.\")\n",
+    "        email_conflict_percentage = None\n",
+    "    except Exception as e:\n",
+    "        logging.error(f\"[{current_time}] Error calculating email conflict percentage: {e}\")\n",
+    "        email_conflict_percentage = None\n",
+    "\n",
+    "    logging.info(\"--- Finished Data Quality Metric Calculation ---\")\n",
+    "\n",
+    "    # Optionally, return metrics if you want to store them in a database or another system\n",
+    "    return {\n",
+    "        'timestamp': current_time,\n",
+    "        'missing_price_percentage': missing_price_percentage,\n",
+    "        'email_conflict_percentage': email_conflict_percentage\n",
+    "    }\n",
+    "\n",
+    "# --- 3. Implement a Scheduled Script (Conceptual) ---\n",
+    "# For a real-world application, you would use a dedicated scheduler.\n",
+    "\n",
+    "def run_monitoring_system_concept(interval_seconds=10, run_duration_seconds=60):\n",
+    "    \"\"\"\n",
+    "    A conceptual function to demonstrate scheduling.\n",
+    "    In a real scenario, you'd use 'schedule' library or OS-level schedulers (cron, Task Scheduler).\n",
+    "    \"\"\"\n",
+    "    logging.info(f\"Monitoring system will run every {interval_seconds} seconds for {run_duration_seconds} seconds (conceptual).\")\n",
+    "    start_time = time.time()\n",
+    "    while (time.time() - start_time) < run_duration_seconds:\n",
+    "        calculate_quality_metrics()\n",
+    "        logging.info(f\"Next run in {interval_seconds} seconds...\")\n",
+    "        time.sleep(interval_seconds)\n",
+    "    logging.info(\"Conceptual monitoring run finished.\")\n",
+    "\n",
+    "# --- How to use in a real scheduling scenario (using 'schedule' library) ---\n",
+    "# Uncomment and install 'schedule' (pip install schedule) for a more robust scheduler\n",
+    "\n",
+    "# import schedule\n",
+    "# import time\n",
+    "\n",
+    "# def job():\n",
+    "#     calculate_quality_metrics()\n",
+    "\n",
+    "# # Schedule the job to run daily at a specific time, or every hour, etc.\n",
+    "# # schedule.every().day.at(\"03:00\").do(job)\n",
+    "# # schedule.every(1).hour.do(job)\n",
+    "# schedule.every(10).seconds.do(job) # For quick testing\n",
+    "\n",
+    "# logging.info(\"Scheduler configured. Waiting to run jobs...\")\n",
+    "# while True:\n",
+    "#     schedule.run_pending()\n",
+    "#     time.sleep(1) # Wait one second between checks\n",
+    "\n",
+    "# --- Run the conceptual monitoring system ---\n",
+    "if __name__ == \"__main__\":\n",
+    "    # To run the conceptual loop:\n",
+    "    run_monitoring_system_concept(interval_seconds=5, run_duration_seconds=30)\n",
+    "\n",
+    "    # To use the 'schedule' library (uncomment the 'import schedule' and related lines above):\n",
+    "    # print(\"\\nTo run with 'schedule' library, uncomment the relevant lines and install it.\")\n",
+    "    # print(\"For this example, the conceptual loop is running.\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
